# aoc2023

day3/: Cargo.toml
day4/: .gitignore  Cargo.toml  README.md  pyproject.toml
day4/python/: part2.py
day4/python/day4/: __init__.py  part2.py
day4/src/: lib.rs
day4_python/: README.md  pyproject.toml
day4_python/src/day4_python/: part2.py
