[project]
name = "day4"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Xoeseko Nyomi", email = "xoeseko@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["maturin>=1.2,<2.0"]
build-backend = "maturin"

[tool.rye]
managed = true
dev-dependencies = [
    "pip>=23.3.2",
    "pytest>=7.4.4",
]

[tool.maturin]
python-source = "python"
module-name = "day4._lowlevel"
features = ["pyo3/extension-module"]
