[project]
name = "day4-python"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Xoeseko Nyomi", email = "xoeseko@gmail.com" }
]
dependencies = [
    "pytest>=7.4.4",
    "ruff>=0.1.9",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
